# http-server

./: Cargo.toml  LICENSE  README.md  run.sh  your_program.sh
src/: cli.rs  conn.rs  constants.rs  errors.rs  lib.rs  main.rs  mocks.rs  templates.rs
templates/: 404.html  hello.html
