[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.94"                                # error handling
bytes = "1.9.0"                                  # helps manage buffers
env_logger = "0.11.5"
log = "0.4.22"
thiserror = "2.0.4"                             # error handling
