[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.94"                                # error handling
async-compression = { version = "0.4.18", features = ["tokio", "gzip"] }
bytes = "1.9.0"                                  # helps manage buffers
env_logger = "0.11.5"
httparse = "1.9.5"
log = "0.4.22"
maud = "0.26.0"
thiserror = "2.0.4"                             # error handling
tokio = { version = "1", features = ["full"] }
